# marketdata_parser

./: CMakeLists.txt  README.md  build.sh
cotahist_parser/: CMakeLists.txt  cotahist_parser.cpp  cotahist_parser.h
source/: parser.cpp
